Revert "fix forkme ribbon z-index"
This reverts commit c2974fc0eaf9d3c173a9fca3780e2186c40bbde4.

--- a/docs/css/screen.css
+++ b/docs/css/screen.css
@@ -258,7 +258,6 @@ td {
 	right: 0;
 	border: 0;
 	opacity: 0.3;
-	z-index: 2;
 
 	-webkit-filter: blur(1px);
 	-webkit-transform: scale(0.8);
